Version 1.4
-----------

[X] - Fix issue where the scroll bars will not be enabled after a document is loaded. 

[X] - Add feature to generate a key file and append a hash of the key file to the passwords before encrypting / decrypting.



Version 1.3
------------

[X] - Fixed Issue #1968 - Document Saved Flag incorrectly getting set.

[X] - Added check box to the password entry screen to allow you to cache a password for the currently loaded session.

[X] - Password generator.

[X] - Fix bug where closing the app when minimised causes the application to restore minimised, which makes it 
      hard to get the window back. If the app is minimised when closed, it will save the state as maximised.


Version 1.2
------------

[X] - Use BCrypt as the internal password hash and increase the file format number to 1.1. Old files of version 1.0
      are backwards compatible. They will get saved automatically to version 1.1.

[X] - Made password 2 optional. I still recommend using 2 passwords, but you don't have too.

[X] - Enter on first field on passwords entry dialog box moves focus to second field. Enter on second
      field is the same as clicking the OK button.

[X] - When doing a normal save over the top of a file, prompt the user if they want to overwrite the file.

[X] - Implement panic key to quickly minimize the application. This is bound to the ESC key.

[X] - Use AesCryptoServiceProvider instead of ManagedAES as it is FIPS compliant.

[X] - Have the option to disable DetectURLS.

[X] - When entering a password, implement an on-screen keyboard so that the user can avoid typing the password on the keyboard.
      This is to guard against key sniffers. This is a user request.

[X] - Change 1.1 file format so that it generates a new salt for each save.

[X] - Changed the PBKDF function (Rfc2898DeriveBytes) to perform 40,000 rounds when creating the encryption key.

[X] - Add context menu to the rich text view to include all the standard edting features.
